--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>norte - por olivia maia</title>
+  <title>norte; romance aberto - por olivia maia</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="norte, romance aberto, work in progress.">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -12,10 +12,9 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'norte, romance aberto',
+      name: 'norte',
       loadNavbar: false,
       loadSidebar: true,
-      subMaxLevel: 4,
       coverpage: false,
       markdown: {
         smartypants: true,
