reestruturação para voltar a escrever em um só arquivo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       loadNavbar: false,
       loadSidebar: true,
       coverpage: false,
+      subMaxLevel: 4,
       markdown: {
         smartypants: true,
         breaks: true,
